fix z-index

--- a/src/less/res.less
+++ b/src/less/res.less
@@ -148,6 +148,7 @@
   top: 7px;
   cursor: pointer;
   right: 10px;
+  z-index: 99999;
 }
 .res-header .icon-search{
     position: absolute;
